lustre/ldlm/ldlm_lib.c
@@ -2266,8 +2266,7 @@ repeat:
 		/** evict exports which didn't finish recovery yet */
 		class_disconnect_stale_exports(obd, exp_finished);
 		return 1;
-	} else if (obd->obd_recovery_expired &&
-		   obd->obd_recovery_timeout < obd->obd_recovery_time_hard) {
+	} else if (obd->obd_recovery_expired) {
 		obd->obd_recovery_expired = 0;
 
 		/** If some clients died being recovered, evict them */
